yns.scss
/*-- scss:defaults --*/

// colors

// primary colors
$black: #000000;
$white: #ffffff;
$gray-800: #343a40;
$gray-900: #212529;

// https://github.com/tidyverse/tidytemplate/blob/6345fdbee6f46cb39814f488addf793fb920c813/inst/pkgdown/BS5/extra.scss
$faint-border: #efefef !default;

// brand colors created by Katie
$slate: #283d3b;
$caribbean: #19727b;
$champagne: #edddd4;
$persian: #c44536;
$burnt: #772e25;
$sky: #d3e2e3;

$champagne-light: #fbf8f6; // lighten($champagne, 80%); // https://mdigi.tools/lighten-color/#edddd4

// set colors
$primary: $caribbean;
$secondary: $slate;
$success: $caribbean;
$warning: $burnt;
$danger: $persian;
$info: $caribbean;

//$body-color: $slate;
$body-bg: $champagne-light; //$link-color: $slate;
$link-decoration: underline;

$navbar-bg: $caribbean;
$navbar-hl: $champagne;
/*
$navbar-fg: $white;
$footer-bg: $sky;
$footer-fg: $slate;
$footer-hl: $caribbean;
*/

$code-block-bg-alpha: -0.8;
$code-bg-alpha: -0.8;
$code-alpha: 0.9;
$code-bg: $champagne;
$code-color: $caribbean;

$callout-color-tip: $slate;
$callout-color-note: $caribbean;
$callout-color-caution: $burnt;
$callout-color-warning: $persian;

.navbar-logo {
  min-height: 50px;
}
/*
.navbar {
    border-bottom: 1px solid $champagne;
}
*/

.footer {
  border-top: 1px solid $champagne;
  background-image: url("https://raw.githubusercontent.com/neighborhood-scientist/neighborhoodscientist.org/6134ad4ab758d9372a23a7c51f221885e39c10a9/img/Neighborhood_01_transparent.png");
  background-position: bottom;
  background-size: contain;
  height: 170px;
  width: 100%;
  background-repeat: repeat-x;
}

// fonts
@import url("https://fonts.googleapis.com/css2?family=Inter");
@import url("https://fonts.googleapis.com/css?family=Lato");
@import url("https://fonts.googleapis.com/css?family=Newsreader");
@import url("https://fonts.googleapis.com/css?family=Raleway");
@import url("https://fonts.googleapis.com/css?family=Roboto");
@import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro");
@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro");

$font-family-sans-serif: "Lato", Helvetica, "Roboto", "Source Sans Pro",
  sans-serif;
$font-family-monospace: "Andale Mono", "Source Code Pro", "Roboto Mono",
  monospace;
$headings-font-family: "Lato", Helvetica, "Roboto", "Source Sans Pro",
  sans-serif;

/*-- scss:rules --*/
// https://github.com/quarto-dev/quarto-cli/blob/b822c3f5cc2b7dd57238bed2bcbbd2c2ed7688b8/src/resources/formats/html/bootstrap/themes/lumen.scss#L119-L133

// Mixins

@mixin shadow($width: 4px) {
  border-style: solid;
  border-width: 0 1px $width 1px;
}

// about page
// https://github.com/quarto-dev/quarto-cli/blob/febb497f208fdf731c00c20f7653c2766754ba89/src/resources/projects/website/about/about.scss

// remove borders from about links
div.quarto-about-jolla .about-link {
  font-size: 1em;
  border-style: none;
  transition: all 0.35s ease;
}

div.quarto-about-jolla .about-image {
  border-style: solid;
  border-color: $champagne;
  border-width: 0px;
}

div.quarto-about-marquee .quarto-title h1.title {
  text-align: center;
}

// remove borders from about links
div.quarto-about-trestles .about-entity .about-link {
  font-size: 1em;
  border-style: none;
  transition: all 0.35s ease;
}

// turn off image download https://stackoverflow.com/questions/21110130/protect-image-download
img {
  pointer-events: none;
}

// custom rules

.align-center {
  text-align: center !important;
}

